--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 title: Menu
 email: hz0605@naver.com
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "Blog for study"
   Console theme simplifying Jekyll blog implementation process. Concise and fast theme.
 baseurl: "" # the subpath of your site, e.g. /blog
 production_url: "http://localhost:3000"
